--- a/_html/index.html
+++ b/_html/index.html
@@ -40,6 +40,7 @@
 					<li>___POPUPS___</li>
 					<li><a href="" class="js-popup-open" data-popup="popup-read">Popup read</a></li>
 					<li><a href="" class="js-popup-open" data-popup="popup-main">Popup main</a></li>
+					<li><a href="" class="js-popup-open" data-popup="popup-STO">Popup STO</a></li>
 					
 				</ul>
             </div>
