--- a/overview.html
+++ b/overview.html
@@ -796,6 +796,178 @@
             </div>
         </div><!--/popup-outer-box-->
 
+        <div class="popup-outer-box active" id="popup-STO">
+            <div class="popup-box popup-form">
+                <div class="popup-title-wrap">
+                    <div class="popup-title">Join Pre-STO whitelist</div>
+                    <p>Please, fill the form to reserve the allocation.</p>
+                    <a href="" class="btn-action-ico ico-close-main js-popup-close"></a>
+                </div>
+                <div class="popup-content-wrap">
+                    <div class="popup-form-box">
+                        <div class="frm-row">
+                            <div class="frm-field">
+                                <div class="frm-main-country">
+                                    <div class="country-selector ">
+                                        <div class="selector"><!--class active to open dropdown-->
+                                            <div class="selector-title">Country / Region</div>
+                                            <button type="button" class="button form-input inp-large inp-button" data-cy="country_input_field">
+                                                <span class="country-name">
+                                                    <span class="english">United States</span>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <div class="country-options">
+                                            <div class="country-search">
+                                                <div class="search ">
+                                                    <input type="text" class="form-input inp-large input-country-search" data-cy="country_search_input" value="">
+                                                    <button class="cancel_button" type="button"></button>
+                                                </div>
+                                            </div>
+                                            <div class="option">
+                                                <button type="button" class="country-option" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country01.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">Afghanistan</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option active" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country02.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">Aland Islands</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country03.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">Albania</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country04.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">Algeria</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country05.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">American Samoa</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country01.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">Afghanistan</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option active" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country02.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">Aland Islands</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country03.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">Albania</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country04.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">Algeria</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country05.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">American Samoa</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country01.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">Afghanistan</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option active" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country02.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">Aland Islands</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country03.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">Albania</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country04.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">Algeria</span>
+                                                    </span>
+                                                </button>
+                                                <button type="button" class="country-option" data-cy="country_option_AF">
+                                                    <img src="./img/icons/country05.svg" alt="country">
+                                                    <span class="country-name">
+                                                        <span class="english">American Samoa</span>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="frm-row">
+                            <div class="frm-field">
+                                <input type="text" class="form-input inp-large" placeholder="First Name">
+                            </div>
+                        </div>
+                        <div class="frm-row">
+                            <div class="frm-field">
+                                <input type="text" class="form-input inp-large" placeholder="Last Name">
+                            </div>
+                        </div>
+                        <div class="frm-row">
+                            <div class="frm-field">
+                                <input type="email" class="form-input inp-large" placeholder="name@example.com">
+                            </div>
+                        </div>
+                        <div class="frm-row">
+                            <div class="frm-field">
+                                <div class="frm-main-select js-popup-wrap js-popup-select">
+                                    <a href="" class="btn-popup form-input inp-button inp-large js-btn-toggle">
+                                        <span class="button-title" data-placeholder="Potential Allocation"></span>
+                                    </a>
+                                    <div class="select-content-block js-popup-block">
+                                        <ul class="menu">
+                                            <li><a href="" class="select-button">$100-$500$</a></li>
+                                            <li><a href="" class="select-button">$500-$1,000</a></li>
+                                            <li><a href="" class="select-button">$1,000-$10,000</a></li>
+                                            <li><a href="" class="select-button">$10,000-100,000</a></li>
+                                            <li><a href="" class="select-button">$100,00+</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="frm-field-message ms-error">This field is required</div>
+                            </div>
+                        </div>
+                        <div class="frm-row-submit">
+                            <div class="frm-field field-info">
+                                <p>By submitting the form you agree to the <a href="">Terms & Conditions</a> and <a href="">Privacy Policy</a>.</p>
+                            </div>
+                            <div class="frm-field field-button">
+                                <button type="submit" class="btn button-large">Send</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!--/popup-outer-box-->
+
     </div>
     <!-- /wrap -->
 
