--- a/products.html
+++ b/products.html
@@ -877,7 +877,7 @@
             </div>
         </div><!--/popup-outer-box-->
 
-        <div class="popup-outer-box active" id="popup-STO">
+        <div class="popup-outer-box" id="popup-STO">
             <div class="popup-box popup-form">
                 <div class="popup-title-wrap">
                     <div class="popup-title">Join Pre-STO whitelist</div>
