--- a/pitch.html
+++ b/pitch.html
@@ -1852,7 +1852,7 @@
                         <div class="frm-row">
                             <div class="frm-field">
                                 <div class="frm-main-select js-popup-wrap js-popup-select">
-                                    <a href="" class="btn-popup form-input inp-button inp-large js-btn-toggle">
+                                    <a href="" class="btn-popup form-input inp-button inp-large inp-error js-btn-toggle">
                                         <span class="button-title" data-placeholder="Potential Allocation"></span>
                                     </a>
                                     <div class="select-content-block js-popup-block">
