--- a/pitch.html
+++ b/pitch.html
@@ -1873,8 +1873,26 @@
                                 <p>By submitting the form you agree to the <a href="">Terms & Conditions</a> and <a href="">Privacy Policy</a>.</p>
                             </div>
                             <div class="frm-field field-button">
-                                <button type="submit" class="btn button-large">Send</button>
+                                <button type="submit" class="btn button-large" disabled>Send</button>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!--/popup-outer-box-->
+
+        <div class="popup-outer-box" id="popup-STO-succefull">
+            <div class="popup-box popup-form-succefull">
+                <a href="" class="btn-action-ico ico-close-main js-popup-close"></a>
+                <div class="popup-content-wrap">
+                    <div class="popup-succefull-box">
+                        <div class="text-inner-wrap">
+                            <img src="./img/icons/succefull.svg" alt="">
+                            <div class="text-inner-title">Thank you for submission!</div>
+                            <p>Description text</p>
+                        </div>
+                        <div class="action-inner-wrap">
+                            <a href="" class="btn button-large">Close</a>
                         </div>
                     </div>
                 </div>
