--- a/_html/index.html
+++ b/_html/index.html
@@ -41,6 +41,7 @@
 					<li><a href="" class="js-popup-open" data-popup="popup-read">Popup read</a></li>
 					<li><a href="" class="js-popup-open" data-popup="popup-main">Popup main</a></li>
 					<li><a href="" class="js-popup-open" data-popup="popup-STO">Popup STO</a></li>
+					<li><a href="" class="js-popup-open" data-popup="popup-STO-succefull">Popup STO succefull</a></li>
 					
 				</ul>
             </div>
