--- a/_html/roadmap.html
+++ b/_html/roadmap.html
@@ -510,7 +510,7 @@
 						<li>
 							<a href="" class="btn-menu">
 					<span class="button-ico">
-						<img src="./img/icons/menu06.svg" alt="">
+						<img src="./img/icons/STO.svg" alt="">
 					</span>
 								<span class="button-title">STO</span>
 							</a>
