--- a/fees.html
+++ b/fees.html
@@ -514,96 +514,98 @@
                                                 </div>
                                             </div>
                                             <div class="option">
-                                                <button type="button" class="country-option" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country01.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">Afghanistan</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option active" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country02.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">Aland Islands</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country03.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">Albania</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country04.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">Algeria</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country05.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">American Samoa</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country01.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">Afghanistan</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option active" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country02.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">Aland Islands</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country03.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">Albania</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country04.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">Algeria</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country05.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">American Samoa</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country01.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">Afghanistan</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option active" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country02.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">Aland Islands</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country03.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">Albania</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country04.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">Algeria</span>
-                                                    </span>
-                                                </button>
-                                                <button type="button" class="country-option" data-cy="country_option_AF">
-                                                    <img src="./img/icons/country05.svg" alt="country">
-                                                    <span class="country-name">
-                                                        <span class="english">American Samoa</span>
-                                                    </span>
-                                                </button>
+                                                <div class="option-list">
+                                                    <button type="button" class="country-option" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country01.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">Afghanistan</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option active" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country02.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">Aland Islands</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country03.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">Albania</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country04.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">Algeria</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country05.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">American Samoa</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country01.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">Afghanistan</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option active" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country02.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">Aland Islands</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country03.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">Albania</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country04.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">Algeria</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country05.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">American Samoa</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country01.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">Afghanistan</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option active" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country02.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">Aland Islands</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country03.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">Albania</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country04.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">Algeria</span>
+                                                        </span>
+                                                    </button>
+                                                    <button type="button" class="country-option" data-cy="country_option_AF">
+                                                        <img src="./img/icons/country05.svg" alt="country">
+                                                        <span class="country-name">
+                                                            <span class="english">American Samoa</span>
+                                                        </span>
+                                                    </button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
