--- a/_html/pitch.html
+++ b/_html/pitch.html
@@ -129,7 +129,7 @@
 								<!--/item wrap-->
 								<!--item wrap-->
 								<div class="item-wrap wrap-full">
-									<div class="item-tile-pitch-full text-body-small">
+									<div class="item-tile-pitch-full text-body-small photo-bottom">
 										<div class="tile-title-wrap">
 											<div class="tile-subtitle h6-title title-gradient">The Solution for these problems</div>
 											<div class="tile-title h4-title">Bank and crypto in&nbsp;the same App!</div>
@@ -143,7 +143,7 @@
 										</div>
 										<div class="tile-photo-wrap">
 											<div class="tile-photo">
-												<img src="./img/pitch-tiles.png" alt="">
+												<img src="./img/new.png" alt="">
 											</div>
 										</div>
 									</div>
@@ -728,17 +728,19 @@
 											<thead>
 												<tr>
 													<th></th>
-													<th>2023</th>
-													<th>2024</th>
-													<th>2025</th>
-													<th>2026</th>
-													<th>2027</th>
-													<th>2028</th>
+													<th>2022A</th>
+													<th>2023E</th>
+													<th>2024E</th>
+													<th>2025E</th>
+													<th>2026E</th>
+													<th>2027E</th>
+													<th>2028E</th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
 													<th>All Customers (registered)</th>
+													<td>12k</td>
 													<td>467k</td>
 													<td>1.9m</td>
 													<td>4.9m</td>
@@ -748,6 +750,7 @@
 												</tr>
 												<tr>
 													<th>Monthly active users (MAU)</th>
+													<td>700</td>
 													<td>131k</td>
 													<td>566k</td>
 													<td>1.7m</td>
@@ -757,6 +760,7 @@
 												</tr>
 												<tr>
 													<th>Revenue p.a. $</th>
+													<td>40k</td>
 													<td>10.6m</td>
 													<td>79.2m</td>
 													<td>300m</td>
