--- a/commands.html
+++ b/commands.html
@@ -687,17 +687,30 @@
                         </div>
                         <div class="frm-row">
                             <div class="frm-field">
-                                <input type="text" class="form-input inp-large" placeholder="First Name">
-                            </div>
-                        </div>
-                        <div class="frm-row">
-                            <div class="frm-field">
-                                <input type="text" class="form-input inp-large" placeholder="Last Name">
+                                <input type="text" class="form-input inp-large" placeholder="Full Name">
                             </div>
                         </div>
                         <div class="frm-row">
                             <div class="frm-field">
                                 <input type="email" class="form-input inp-large" placeholder="name@example.com">
+                            </div>
+                        </div>
+                        <div class="frm-row">
+                            <div class="frm-field">
+                                <div class="frm-field-panel">
+                                    <div class="frm-field-select">
+                                        <input type="radio" name="select-main" id="select-main01">
+                                        <label class="lbl-field-title" for="select-main01">
+                                            <span class="lbl-title">Tokenised stocks (ERC20)</span>
+                                        </label>
+                                    </div>
+                                    <div class="frm-field-select">
+                                        <input type="radio" name="select-main" id="select-main02" checked>
+                                        <label class="lbl-field-title" for="select-main02">
+                                            <span class="lbl-title">Stocks (min&nbsp;$50k)</span>
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="frm-row">
@@ -720,12 +733,10 @@
                             </div>
                         </div>
                         <div class="frm-row-submit">
-                            <div class="frm-field field-info">
-                                <p>By submitting the form you agree to the <a href="">Terms & Conditions</a> and <a href="">Privacy Policy</a>.</p>
-                            </div>
                             <div class="frm-field field-button">
                                 <button type="submit" class="btn button-large" disabled>Send</button>
                             </div>
+                            <div class="frm-field field-info">By submitting the form you agree to the <a href="">Terms&nbsp;&&nbsp;Conditions</a> and <a href="">Privacy Policy</a>.</div>
                         </div>
                     </div>
                 </div>
